# Custom_OpenGL_GraphicEngine

./: Application.cpp  Application.h  CMakeLists.txt  MyExceptions.cpp  MyExceptions.h  README.md  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
Assets/Geometry/: Knight.mtl  smooth_sphere.dae
Assets/Materials/: CleanKnight_cloth.Material  CleanKnight_metal.Material  Cowboy.Material  WornKnight_cloth.Material  WornKnight_metal.Material  grimy_metal.Material  iron_scuffed.Material  metal_slpotchy.Material  mirror.Material  rusted_iron.Material  scuffed_plastic_black.Material  scuffed_plastic_blue.Material  scuffed_plastic_creme.Material  scuffed_plastic_gray.Material  scuffed_plastic_green.Material  scuffed_plastic_pink.Material  scuffed_plastic_red.Material  scuffed_plastic_white.Material  scuffed_plastic_yellow.Material  synth_rubber.Material
Assets/Models/: Cowboy.model  Grass.model  Knight.model  Sphere.model
Dependencies/: CMakeLists.txt
Dependencies/include/GL/: glcorearb.h
Materials/: material.Material  textureResizer.sh
Materials/rusted_iron/: rusted_iron.Material
Materials/scuffed_plastic/: scuffed_plastic_black.Material  scuffed_plastic_blue.Material  scuffed_plastic_creme.Material  scuffed_plastic_gray.Material  scuffed_plastic_green.Material  scuffed_plastic_pink.Material  scuffed_plastic_red.Material  scuffed_plastic_white.Material  scuffed_plastic_yellow.Material
Meshes/: cowboy.fbx  cowboy.ply
Models/Chest/: Chest.dae
Models/CleanMetalKnight/Materials/: Armour_Cloth_Battered.Material  Armour_Metal_Battered.Material
Models/Cowboy/Materials/: Material.Material
Models/WornMetalKnight/Materials/: Armour_Cloth_Battered.Material  Armour_Metal_Battered.Material
OnChangeListenerTemplate/: OnChangeListener.h  OnChangeNotifier.h  Utility.cpp  Utility.h
Shaders/: basic.frag  basic.vert  basic.vs  basic_instanced.vs  divide.fs  divide.tcs  divide.tes  divide.vs  sinWave.vert
Shaders/AnimationShader/: animated.fs  animated.vs
Shaders/BasicTextured/: basic.vs  basic_instanced.vs
Shaders/CubeMaps/: centered_cube_map_vertex.glsl
Shaders/CubeMaps/DiffuseIrradianceMap/: fragment.glsl
Shaders/CubeMaps/PrefilteredEnviromentMap/: fragment.glsl
Shaders/CubeMaps/SkyBox/: fragment.glsl
Shaders/EquiretangularToCubemap/: fragment.glsl  vertex.glsl
Shaders/FORWARD_PBR_IBL/: fragment.glsl  vertex.glsl
Shaders/FORWARD_PBR_RM/: fragment.glsl  vertex.glsl
Shaders/FORWARD_PBR_RM_TANGENT_SPACE/: fragment.glsl  vertex.glsl
Shaders/SkyBox/: fragment.glsl  vertex.glsl
Shaders/WaterShader/: water.fs  water.tcs  water.tes  water_instanced.vs
Shaders/WaterShaderTextured/: water.fs  water.tcs  water.tes  water_instanced.vs
Source/: Application.cpp  Application.h  MyExceptions.cpp  MyExceptions.h  ToGPUniformSender.cpp  ToGPUniformSender.h  UniformSendingInfo.h  main.cpp
Source/Assets/: AssimpConversion.cpp  AssimpConversion.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  UsedDirectories.h  myXML.cpp  myXML.h
Source/Assets/Mesh/: Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshGenerator.cpp  MeshGenerator.h  MeshLoader.cpp  MeshLoader.h
Source/Assets/SkeletalSystem/: SkeletalAnimation.cpp  SkeletalAnimation.h  SkeletalAnimator.cpp  SkeletalAnimator.h  Skeleton.cpp  Skeleton.h  SkeletonAnimationLoader.cpp  SkeletonAnimationLoader.h  SkeletonConstants.h  SkeletonLoader.cpp  SkeletonLoader.h
Source/Assets/Textures/: Material.cpp  Material.h  MaterialsLoader.cpp  MaterialsLoader.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
Source/DataLayer/StorageManagment/: EntityStorageManager.h  EntitySystem.cpp  EntitySystem.h  MeshStorageManager.h  MeshToModelMap.h  ModelMatricesBuffer.h  ModelStorageManager.h  ModelToModelSpaceMatricesMap.h  ModelsBuffer.h  StorageManagerTemplate.h
Source/EngineLogic/: Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  EntityStorageManager.h  EntitySystem.cpp  EntitySystem.h  ModelMatricesBuffer.h  ModelStorageManager.h  ModelToModelSpaceMatricesMap.h  StorageManagerTemplate.h
Source/EntitySystem/: Mesh.h  MeshGenerator.cpp
Source/GraphicsLayer/: FreeCamera.cpp  FreeCamera.h  OpenGLinitializer.cpp  OpenGLinitializer.h
Source/GraphicsLayer/ShaderProgram/: Shader.cpp  Shader.h
Source/GraphicsLayer/Window/: InputMetadata.h  InputSystem.cpp  InputSystem.h  KeyStateGetter.cpp  KeyStateGetter.h  Window.cpp  Window.h
Source/OpenGL/: OpenGLinitializer.cpp  OpenGLinitializer.h
Source/OpenGL/RenderSystem/: AbstractRenderer.cpp  AbstractRenderer.h
Source/OpenGL/RenderSystemV2/: RenderContentProvider.cpp  Renderer.cpp  Renderer.h
Source/OpenGL/SendingDataToGPU/: ToGPUattribueSender.h  ToGPUniformSender.h  UniformSendingInfo.cpp  VertexLoadingInfo.cpp  VertexLoadingInfo.h
Source/OpenGL/ShaderProgram/: Shader.cpp  Shader.h
Source/Platform/OpenGL/: OpenGLinitializer.cpp  OpenGLinitializer.h  Texture.cpp  Texture.h
Source/SampleApps/: AbstractApplication.cpp  AbstractApplication.h  AbstractRenderer.cpp  AbstractRenderer.h  Application.cpp  Application.h  ForwardRenderer.cpp  ForwardRenderer.h  GeometryGenerator.cpp  GeometryGenerator.h  Mesh.cpp  Mesh.h  MeshGenerator.cpp  MeshGenerator.h  OpenGLinitializer.cpp  OpenGLinitializer.h  Renderer.cpp  Renderer.h  ToGPUattribueSender.cpp  ToGPUattribueSender.h  ToGPUdataLoader.cpp  ToGPUdataLoader.h  ToGPUniformSender.cpp  ToGPUniformSender.h  Vertex.h
Source/SampleApps/RenderV2Sample/: Application.cpp  Application.h  RendererSystemV2Sample.cpp  RendererSystemV2Sample.h  main.cpp
Source/SampleApps/SinWaveApp/: Application.h  ForwardSinWaveRenderer.cpp  ForwardSinWaveRenderer.h  ForwardTesselationRenderer.cpp  ForwardTesselationRenderer.h  SinWaveApp.cpp  SinWaveApp.h
Source/SampleApps/TesselationApp/: TesselationApp.cpp  TesselationApp.h  main.cpp
Source/SampleApps/Triangle/: Application.cpp  Application.h
Source/View/: Shader.cpp  Shader.h  Window.cpp  Window.h
Textures/equirectangular/Frozen_Waterfall/: Waterfall_Irradiance.hdr  Waterfall_Radiance.hdr  Waterfall_Radiance.ktx
docs/: index.md
gl3w/: CMakeLists.txt
(+121 files in other folders)
